[package]
name = "helios-opstack"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "server"
path = "./bin/server.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
hex.workspace = true
serde.workspace = true
typenum.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest.workspace = true
url.workspace = true
futures.workspace = true

# consensus
alloy.workspace = true
revm.workspace = true
sha2.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
ssz_types.workspace = true
triehash-ethereum.workspace = true
alloy-rlp = "0.3.0"
op-alloy-network = "0.9.0"
op-alloy-consensus = "0.9.0"
op-alloy-rpc-types.workspace = true
snap = "1"

# config
figment = { version = "0.10.7", features = ["toml", "env"] }
tracing-log = "*"


helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
helios-consensus-core = { path = "../ethereum/consensus-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# server
axum = "0.8"
clap = { version = "4.5.4", features = ["derive", "env"] }
# networking
libp2p = { version = "0.55.0", features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping", "identify"] }
discv5 = "0.9.1"
libp2p-identity = { version = "0.2.10", features = ["secp256k1"] }
libp2p-mplex = "0.43.0"
unsigned-varint = "0.7.1"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.1", features = ["js"] }
